Feat: Added basic popup snow toggler

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,13 @@
 		"48": "icons/winterfox-48.png"
 	},
 
+	"browser_action":
+	{
+		"default_icon": "icons/winterfox-48.png",
+		"default_popup": "popup/controls.html",
+		"default_title": "Winterfox"
+	},
+
 	"content_scripts":
 	[
 		{
